--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "scripts": {
     "start": "tsc server.ts --outDir ./dist && node ./dist/server.js",
-    "start:dev": "npm run mongod & npm run server:dev & ionic serve",
-    "server": "tsc server.ts --outDir ./dist && node ./dist/server.js",
-    "server:dev": "tsc server.ts -w --outDir ./dist & nodemon ./dist/server.js  --ignore src/ --ignore www/ --ignore .tmp/",
+    "start:dev": "npm run mongod & npm run server:dev & ionic serve --dev",
+    "start:prod": "npm run server & ionic serve --prod",
+    "server": "tsc server.ts --outDir ./dist && NODE_ENV=prod node ./dist/server.js",
+    "server:dev": "tsc server.ts -w --outDir ./dist & nodemon ./dist/server.js --dev --ignore src/ --ignore www/ --ignore .tmp/",
     "mongod": "/usr/local/bin/mongod --dbpath /data/db",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build --prod",
     "ionic:serve": "ionic-app-scripts serve",
     "test": "karma start ./test-config/karma.conf.js"
   },
@@ -91,6 +92,9 @@
   "engines": {
     "node": "~7.0.0"
   },
+  "config": {
+  "ionic_webpack": "./webpack.config.js"
+},
   "version": "0.0.1",
   "description": "demo ionic-devops: An Ionic demo"
 }
