--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy:server": "tsc server.ts --outDir ./dist && cp ./server/package.json ./dist/package.json && cp ./server/.gitignore ./dist/.gitignore && git add --all && git commit -m 'upd version - `date`' && git subtree split -P dist -b heroku-serve && git push heroku heroku-serve:master --force && git branch -D heroku-serve && heroku ps:scale web=1 && heroku open",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build --prod",
+    "ionic:build": "NODE_ENV=prod ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "test": "karma start ./test-config/karma.conf.js"
   },
@@ -58,6 +58,8 @@
     "@types/mongoose": "^4.7.9",
     "@types/node": "^7.0.12",
     "angular2-template-loader": "^0.6.2",
+    "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "html-loader": "^0.4.5",
     "jasmine-core": "^2.5.2",
     "karma": "^1.6.0",
@@ -94,8 +96,8 @@
     "node": "~7.0.0"
   },
   "config": {
-  "ionic_webpack": "./webpack.config.js"
-},
+    "ionic_webpack": "./webpack.config.js"
+  },
   "version": "0.1.1",
   "description": "demo ionic-devops: An Ionic demo"
 }
